# Mitsio-Motu-Test

./: .gitignore  ANSWERS.md  README.md  missing_values_strategy.md  pyproject.toml
data/raw/: .~lock.budgets_regionaux.xlsx#  budgets_regionaux.xlsx  effectifs_eleves.csv  etablissements_scolaires.csv  personnel_enseignant.xlsx
logs/: deleted_rows_clean_effectifs_20260427_120239.csv  deleted_rows_clean_effectifs_20260427_125804.csv  deleted_rows_clean_effectifs_20260427_130632.csv  deleted_rows_clean_effectifs_20260427_132912.csv  doublons_enseignants_supprimes.csv  effectifs_sans_etablissement.csv
src/: bronze_to_silver.py  silver_to_gold.py
tests/: conftest.py  test_gold.py  test_silver.py
