[project]
name = "de-01-standardisation"
version = "0.1.0"
description = "Test technique DE-01 — Standardisation de données ministérielles"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "polars>=1.0",
    "duckdb>=1.1",
    "pyarrow>=17.0",
    "openpyxl>=3.1",
    "chardet>=5.2",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
